# django_profolio

./: README.md  pyproject.toml
my_site/home_app/: urls.py  views.py
my_site/home_app/templates/: hoem.html
my_site/my_site/: settings.py  urls.py
my_site/my_site/static/css/: general.css
my_site/my_site/templates/: base.html
my_site/my_site/templates/partials/: _footer.html  _header.html
