[tool.poetry]
name = "django-profolio"
version = "0.1.0"
description = ""
authors = ["WillyLIFEexp <taiwanpride888@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
pandas = "^2.2.3"
ipython = "^8.30.0"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
